--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       href="https://necolas.github.io/normalize.css/8.0.1/normalize.css"
     />
     <link rel="stylesheet" href="css/style.css" />
+    <meta name="viewport" content="width=1180">
     <title>Document</title>
   </head>
   <body>
